# Machine-Learning

Dependency Injection/dependency_injection/: pyproject.toml
Dependency Injection/dependency_injection/dependency_injection/: main.py
FastAPI/ned_fastapi/: README.md  pyproject.toml  request.ipynb
FastAPI/ned_fastapi/ned_fastapi/: main.py  main1.py  main2.py  main3_QueryParameter.py  main4_QueryParameter.py
FastAPI/ned_fastapi/tests/: test_main.py
File Management/: train_test_validate.ipynb
Poetry/: README.md
SQLModel/ned_sqlmodel/: pyproject.toml
SQLModel/ned_sqlmodel/ned_sqlmodel/: main.py  main2.py
